--- a/creator.html
+++ b/creator.html
@@ -92,6 +92,47 @@
     transform: translateY(-3px);
     box-shadow: 0 10px 20px rgba(0,0,0,0.4);
 }
+@media (max-width: 600px) {
+    body {
+        padding: 20px 10px;
+        align-items: flex-start;
+    }
+
+    .card {
+        width: 100%;
+        max-width: 100%;
+        padding: 25px 20px;
+        border-radius: 20px;
+    }
+
+    .profile-img {
+        width: 120px;
+        height: 120px;
+    }
+
+    h1 {
+        font-size: 1.5rem;
+    }
+
+    .name {
+        font-size: 1.4rem;
+    }
+
+    .position {
+        font-size: 1rem;
+    }
+
+    .info {
+        font-size: 0.95rem;
+    }
+
+    .back {
+        width: 100%;
+        display: block;
+        text-align: center;
+    }
+}
+
     </style>
 </head>
 <body>
