--- a/index.html
+++ b/index.html
@@ -9,16 +9,25 @@
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;600&display=swap" rel="stylesheet">
 
     <style>
-        body {
-            margin: 0;
-            font-family: 'Kanit', sans-serif;
-            background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
-            color: #ffffff;
-            min-height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
+    body {
+    margin: 0;
+    font-family: 'Kanit', sans-serif;
+    background: linear-gradient(
+        -45deg,
+        #0f2027,
+        #203a43,
+        #2c5364,
+        #00c6ff
+    );
+    background-size: 400% 400%;
+    animation: gradientMove 15s ease infinite;
+
+    color: #fff;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
         .container {
             background: rgba(255, 255, 255, 0.1);
@@ -126,6 +135,11 @@ body {
         height: auto;
         border-radius: 12px;
     }
+}
+@keyframes gradientMove {
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
 }
     </style>
 </head>
