--- a/creator.html
+++ b/creator.html
@@ -132,7 +132,11 @@
         text-align: center;
     }
 }
-
+@keyframes gradientMove {
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
+}
     </style>
 </head>
 <body>
