--- a/menu.html
+++ b/menu.html
@@ -109,8 +109,9 @@
     <h1>เมนูประชาสัมพันธ์</h1>
 
     <div class="menu">
-        <a href="#">📢 ข่าวประกาศ</a>
-        <a href="#">📅 ตารางกิจกรรม</a>
+      <a href="news.html">📢 ข่าวประกาศ</a>
+      <a href="events.html">📅 ตารางกิจกรรม</a>
+
    <a href="creator.html" class="full">📞 ผู้จัดทำเว็ปไซค์</a>
     </div>
 
