--- a/events.html
+++ b/events.html
@@ -37,7 +37,7 @@ body {
 <body>
 
 <div class="container">
-    <h1>📢 ข่าวประกาศ</h1>
+    <h1>📢 กิจกรรม</h1>
     <div id="newsList"></div>
     <a href="menu.html" class="back">⬅ กลับเมนู</a>
 </div>
