--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ body {
 
     <p>
         ระบบป้ายประชาสัมพันธ์อัจฉริยะสำหรับแสดงข่าวสาร ประกาศ และข้อมูลสำคัญ
-        แบบเรียลไทม์ เหมาะสำหรับสถานศึกษา
+        เหมาะสำหรับสถานศึกษา
     </p>
 
     <!-- วันที่อยู่บน -->
