--- a/events.html
+++ b/events.html
@@ -38,25 +38,26 @@ body {
 
 <div class="container">
     <h1>📢 กิจกรรม</h1>
-    <div id="newsList"></div>
+    <div id="list"></div>
     <a href="menu.html" class="back">⬅ กลับเมนู</a>
 </div>
 
 <script>
-const news = JSON.parse(localStorage.getItem("news")) || [];
-const list = document.getElementById("newsList");
+const events = JSON.parse(localStorage.getItem("events")) || [];
+const list = document.getElementById("list");
 
-news.forEach(item => {
-    const div = document.createElement("div");
-    div.className = "card";
-    div.innerHTML = `
-        <h3>${item.title}</h3>
-        <p>${item.text}</p>
-        ${item.media ? item.media : ""}
-    `;
-    list.appendChild(div);
+events.forEach(e => {
+  const div = document.createElement("div");
+  div.className = "card";
+
+  div.innerHTML = `
+    <h3>${e.title}</h3>
+    <p>${e.text}</p>
+    ${e.media || ""}
+  `;
+
+  list.appendChild(div);
 });
 </script>
-
 </body>
 </html>
