--- a/creator.html
+++ b/creator.html
@@ -105,7 +105,7 @@ h1{
         <div class="info">
             โครงงานป้ายประชาสัมพันธ์อัจฉริยะ<br>
             สาขาเทคโนโลยีสารสนเทศ<br>
-            วิทยาลัยเทคนิค
+            วิทยาลัยเทคนิคพระนครศรีอยุธยา
         </div>
     </div>
 
@@ -121,7 +121,7 @@ h1{
         <div class="info">
             โครงงานป้ายประชาสัมพันธ์อัจฉริยะ<br>
             สาขาเทคโนโลยีสารสนเทศ<br>
-            วิทยาลัยเทคนิค
+            วิทยาลัยเทคนิคพระนครศรีอยุธยา
         </div>
     </div>
 
